chore: Ensure consistent spacing between <p> and tool request/results

--- a/js/src/chat/chat-tools.scss
+++ b/js/src/chat/chat-tools.scss
@@ -115,6 +115,11 @@ shiny-tool-request {
   }
 }
 
+shiny-tool-result + p,
+shiny-tool-request + p {
+  margin-top: 1rem;
+}
+
 shiny-tool-result,
 shiny-tool-request {
   &:first-child {
